--- a/convergence_criterion_inFEM.tex
+++ b/convergence_criterion_inFEM.tex
@@ -5,10 +5,11 @@
 \usepackage{xeCJK} 
 \usepackage{graphics}
 \usepackage{amssymb}
+\usepackage{xcolor}
 \setCJKmainfont{SimSun}
 \begin{document}
-\author{}
-\title[有限元解的性质和收敛准则]{有限元法的误差分析和收敛分析}
+\author{Changxu Miao}
+\title[有限元法的误差分析和收敛分析]{有限元法的误差分析和收敛分析}
 \subtitle{}
 \institute{NWPU}
 \date{\today}
@@ -18,84 +19,252 @@
 \tableofcontents %[pausesections]
 \end{frame}
 
-\section{收敛条件}
-\subsection{相容性}
-\begin{frame}{相容性}
-以平面问题为例，有限元分片插值，应使泛函式可以求积，积分式为
+%\section{Example}
 
+
+\section{误差来源}
+\subsection{固有误差}
+\begin{frame}{固有误差}
+\begin{theorem}[模型误差]
+对实际工程技术问题建立数学模型时，总是在一定条件下抓住主要因素，忽略次要因素，这样得到的数学模型是理想化的数学模型，它包含了对实际问题进行数学描述时所引起的误差。
+\end{theorem}
+\begin{example}
+弹性力学中的线性假设
+\end{example}
+\end{frame}
+
+\begin{frame}{固有误差}
+\begin{theorem}[观测误差]
+在数学模型或计算公式中包含着一些已知的数据（称为原始数据），这些数据往往是由观测实验得到的，他们和实际的数据大小之间有误差。
+\end{theorem}
+\end{frame}
+
+\subsection{计算误差}
+\begin{frame}{计算误差}
+\begin{theorem}[截断误差]
+许多数学运算理论上的精确值往往需要用无限的过程才能解出，如微分、积分、无穷级数求和等都是通过无限的极限过程来定义的。然而，实际问题的计算在计算机上只能够用有限次的算数运算和逻辑运算来完成，因此需要将问题的解决方案加工成算数运算和逻辑运算的有限序列，这种加工往往表现为无穷过程的截断，由此产生的误差称为截断误差。
+\end{theorem}
+\begin{example}
+一个函数的泰勒展式有无穷多项，但仅仅取有限项来进行近似。
+\end{example}
+\end{frame}
+
+\begin{frame}{计算误差}
+\begin{theorem}[舍入误差]
+由于计算机数系是离散的有限集，计算机在接收和运算数据时，总是将位数多的数舍入成一定位数的计算机数，这样产生的误差称为舍入误差。
+\end{theorem}
+\begin{example}
+无限循环小数、$\pi$
+\end{example}
+\end{frame}
+
+
+
+\section{里兹法误差来源}
+\subsection{等效积分形式}
+\begin{frame}{微分方程的等效积分形式}
+\begin{block}{工程问题的一般形式}
+工程问题中，通常以未知场函数满足的微分形式和边界条件的形式来提出的，可一般地表示为未知函数$\textbf{u}$应满足微分方程组
+\begin{align}
+\textbf{A}(\textbf{u})=
+\left[ \begin{matrix}
+A_1(\textbf{u})\\ 
+A_2(\textbf{u})\\ 
+\vdots
+\end{matrix}\right]
+= \textbf{0}
+\text{在$\Omega$内}
+\label{一般微分形式}
+\end{align}
+同时，未知函数$\textbf{u}$应满足边界条件
+\begin{align}
+\textbf{B}(\textbf{u})=
+\left[ \begin{matrix}
+B_1(\textbf{u})\\ 
+B_2(\textbf{u})\\ 
+\vdots
+\end{matrix}\right]
+= \textbf{0}
+\text{在$\Gamma$内}
+\label{一般边界形式}
+\end{align}
+\end{block}
+\end{frame}
+
+\begin{frame}{建立等效积分形式}
+由于微分方程组\ref{一般微分形式}在域$\Omega$域中每一个点都为零，所以对函数向量
+\begin{align}
+\textbf{v}=
+\left[ \begin{matrix}
+v_1\\ 
+v_2\\ 
+\vdots
+\end{matrix}\right]
+\end{align}
+其中元素个数与微分方程组$\textbf{A}$的个数相同。\\
+
+所以有
+\begin{align}
+\int_\Omega \textbf{v}^T\textbf{A}(\textbf{u})\mathrm{d}\Omega\equiv
+\int_\Omega (v_1 A_1(\textbf{u})+v_2 A_2(\textbf{u})+\cdots)\mathrm{d}\Omega\equiv0
+\label{微分方程积分形式}
+\end{align}
+由于$\textbf{v}$是任意的，所以可断言积分方程\ref{微分方程积分形式}与微分方程组\ref{一般微分形式}是等价的。
+\end{frame}
+
+\begin{frame}{建立等效积分形式}
+对于边界条件，同理，对任意一组函数$\overline{\textbf{v}}$有以下式子成立
+\begin{align}
+\int_\Gamma \overline{\textbf{v}}^T\textbf{B}(\textbf{u})\mathrm{d}\Gamma\equiv
+\int_\Gamma (\overline{v_1} B_1(\textbf{u})+\overline{v_2} B_2(\textbf{u})+\cdots)\mathrm{d}\Gamma\equiv0
+\label{边界条件积分形式}
+\end{align}
+因此，对于一般问题的微分方程的等效积分形式为
+\begin{align}
+\int_\Omega \textbf{v}^T\textbf{A}(\textbf{u})\mathrm{d}\Omega
++\int_\Gamma \overline{\textbf{v}}^T\textbf{B}(\textbf{u})\mathrm{d}\Gamma=0
+\label{一般积分方程}
+\end{align}
+\end{frame}
+
+\begin{frame}{建立等效积分形式}
+很多情况下可对如下式子进行分部积分
+\begin{align}
+\int_\Omega \textbf{v}^T\textbf{A}(\textbf{u})\mathrm{d}\Omega
++\int_\Gamma \overline{\textbf{v}}^T\textbf{B}(\textbf{u})\mathrm{d}\Gamma=0
+\label{一般积分方程}
+\end{align}
+从而得到另一形式
+\begin{align}
+\int_\Omega \textbf{C}^T(\textbf{v})\textbf{D}(\textbf{u})\mathrm{d}\Omega
++\int_\Gamma \textbf{E}^T(\overline{\textbf{v}})\textbf{F}(\textbf{u})\mathrm{d}\Gamma=0
+\label{弱解形式}
+\end{align}
+由分部积分特点可得，微分算子$C,D,E,F$中包含的导数阶数比$A$中的低，这样就降低了对函数$u$的连续性要求。这种方法是以提高对$v，\overline{v}$连续性要求为代价，但由于原本对$v，\overline{v}$连续性并无要求，所以这个过程并不困难，值得一提的是，从形式上看，“弱”形式对函数$u$的连续性要求降低了，但对实际的物理问题却较原始微分方程更加逼近真实解，因为原始微分方程往往对解提出了过分“平滑”的要求。
+\end{frame}
+
+\subsection{变分原理和里兹法}
+\begin{frame}{变分原理和里兹法}
+\begin{block}{加权余量法}
+对于建立的等效积分表达形式，我们可使用加权余量法对其进行求解，如配点法，子域法，最小二乘法，力矩法，伽辽金法等。
+\end{block}
+\begin{block}{线性微分算子}
+若有微分方程
 \begin{align*}
-\Pi=\int_\Omega\frac{1}{2}\{\varepsilon\}^{T}[D]\{\varepsilon\}hd\Omega-\int_\Omega \{u\}^{T}\{p\}d\Omega-\int_\Gamma_{\sigma} \{u\}^{T}\{T\}d\Gamma
+L(u)+b=0\qquad \text{在$\Omega$域内}
 \end{align*}
-
-求解域$\Omega$剖分为单元之后，选取了单元内连续的形状函数，则位移$\{u\}$和应变\{$\varepsilon$\}在单元内部都是连续的,而单元之间则只允许有一类间断（有界）。按式，平面问题的应变\{$\varepsilon$\}只是位移$\{u\}$的一阶导数，为使\{$\varepsilon$\}有界。就要求各单元按节点插值出的位移$\{u\}$在相邻单元之间是连续的（只要求函数本身连续，不要求导数连续）。在此条件下，结构总的弹性应变能$U$等于各单元应变能$U^{e}$之和，式成立，可以推出有$[K]=\Sigma [k]^{e}$,前述的有限元分析才是合理的。如果平面问题的单元之间不相容，按节点插值出的单元交界面上位移不连续，则单元交界面上的应变$\varepsilon$无界，式不成立。这种分片插值的里兹法求解是不合法的。
-
-\end{frame}
-
-
-\begin{frame}{相容性}
-从力学角度看，结构受力变形时，相邻单元间有内力作用，如果相邻单元间的位移不连续，有相对位移，则该处内力在此相对位移上做功，在单元交界处另贮存有内力能。此时结构总弹性能应为
-\par
-$U=\Sigma[k]^{e}+$单元间内能
-\par
-这样，前述的有限元分析方法就不能成立。
-\end{frame}
-
-\begin{frame}{相容性}	
-平面简单三角形单元，单元内位移是节点位移的线性插值，变形前单元的直线边界于变形后仍保持为直线，因而相邻单元间，由两个公共节点位移决定的直线是重合的，单元间位移是连续的，满足相容性要求。对于薄板、细梁的弯曲问题，应变为挠度的二阶导数。若以挠度为求解函数，为使泛函可以求积，相容性要求单元间挠度及其一阶导数都连续，否则相邻单元间的切力或弯矩要做功，式又不成立了。只要求求解函数在单元之间连续，称$C_{0}$阶连续性要求；要求函数及其一阶导数在单元间都连续，称$C_{1}$阶连续性要求。这种较高阶的相容性要求给薄板类结构的有限元分析带来了相当大的困难。
-\end{frame}
-
-\subsection{完备性}
-\begin{frame}{完备性}	
-结构受载荷而变形，当单元缩小时，每个单元的实际应变都应趋于常值；当某单元周边都不受力时，单元应不变形而做一种刚体运动。因此，单元内位移插值应能完全包含任意的常应变变形形式和刚体位移形式，否则单元位移将不能反映出这种最起码的位移形式，靠单元缩小也不能逼近真解。这就是对形状函数的完备性要求。满足这种要求的许多小单元拼合起来，当单元缩小时，就能实现求解域内应变和应力的任意可能的变化，而逼近真解。
-\end{frame}
-
-\begin{frame}{完备性}
-平面简单三角形单元，单元内位移分布为完全的一次多项式
+其中，微分算子L具有如下性质
 \begin{align*}
-u=a_{1}+a_{2}x+a_{3}y\\
-v=a_{4}+a_{5}x+a_{6}y
+L(\alpha u_1+\beta u_2)=\alpha L(u_1)+\beta L(u_2)
 \end{align*}
-其中$a_{1}a_{6}$（共6个参数）可为任意值，能反映出此单元的三种独立的刚体位移及和三种常应变形式，因此这种单元满足完备性要求。
+\end{block}
 \end{frame}
 
-
-\begin{frame}{完备性}
-一般有限元都假定单元内函数为多项式。如泛函式中对函数的最高阶导数为$m$阶，则相容性要求单元间$m$阶导数有界，$m-1$阶导数连续。而完备性则要求所假定的单元内函数最低需为$m$阶的完全多项式（包括$m$阶以下知道零阶的项都齐全）。
-满足相容性及完备性要求的单元，其有限元解可保证是收敛的；单元划小时，其近似解将趋于真解。
-有限元位移法以节点位移插值出单元内部的位移函数，如用多项式插值，其精度决定于完全多项式的次数，如位移插值式中完全多项式最高位$p$次幂，则单元内位移有$p$阶精度，误差则为$O(h^{p+1})$阶，$h$为单元特征尺寸。当单元缩小时，位移值误差按$h^{p+1}$次方趋于零。如应变为位移的$m$阶导数，则其应变误差为$O(h^{p-m+1})$阶。可见，由位移取导数而得的应变，其精度是降低了。
-\end{frame}
-
-
-\begin{frame}{完备性}
-单元插值函数选定之后，有限元法依靠单元缩小而提高其近似解的精确性，单元小，网格密，总自由度多，计算量大，因为应按要求而安排适当的网格。如果只分析变形或计算其低阶振动频率，网格可以粗一些；如果要分析结构应力，网格则应加密。在结构中应力梯度比较大的区域更应局部加密网格，以期得到好的结果。划分网格时还应避免窄长、歪扭的单元，单元几何形状应尽量接近正多边形。
-\end{frame}
-
-\begin{frame}{完备性}
-基于最小势能原理的有限元，在给定集中载荷列阵之下，如结构对应于载荷的广义位移为$\{\Delta\}$,则结构总势能为
+\begin{frame}{变分原理}
+\begin{block}{自伴随微分算子}
+定义$L(u)$与任意函数的内积为
 \begin{align*}
-\Pi=\dfrac{1}{2}\int_V\{\varepsilon\}^{T}[D]\{\varepsilon\}dV-{P}^{T}\{\Delta\}
+\int_\Omega L(u)v\mathrm{d}\Omega
 \end{align*}
-在弹性变形过程中，由零按比例加载到$\{P\}$时，有
+也可写为$<L(u),u>$。对上式进行分部积分直到$u$的导数消失，结果如下
 \begin{align*}
-\dfrac{1}{2}{P}^{T}\{\Delta\}=\dfrac{1}{2}\int_V\{\varepsilon\}^{T}[D]\{\varepsilon\}dV=U
+\int_\Omega L(u)v\mathrm{d}\Omega = \int_\Omega u L^*(v)\mathrm{d}\Omega+\mathrm{b.t.}(u,v)
 \end{align*}
-则有
-\begin{align*}
-\Pi=U-{P}^{T}\{\Delta\}=-U
-\end{align*}
-可见，相对于未变形位置，结构承载平衡时其总势能为负值。总势能值$\Pi$最小，对应的应变能$U$应为最大。
+上式右端$\mathrm{b.t.}(u,v)$表示$\Omega$的边界$\Gamma$上由$u$和$v$及其导数组成的积分项。算子$L^*$称为$L$的伴随算子，若$L^*=L$，则称算子是自伴随的。
+\end{block}
 \end{frame}
 
-\subsection{有限元解的收敛准则}
-\begin{frame}{有限元解的收敛准则}
-将这一章前面讨论的内容与第1章比较可以看出，有限元法作为求解微分方程的一种数值方法可以认为是里兹法的一种特殊形式，不同之处在于有限元法的试探函数是定义于单元（子域）而不是全域。因此有限元解的收敛性可以与里兹法的收敛性对比进行讨论。里兹法的收敛条件是要求试探函数具有完备性和连续性，即如果试探函数满足完备性和连续性要求，当试探函数的项数$n\to\infty$时，则里兹法的近似解将趋近于微分方程的精确解。现在要研究什么是有限元解的收敛性提法，收敛的条件又是什么。
-\par
-在有限元法中，场函数的总体泛函是由单元泛函集成的。如果采用完全多项式作为单元的插值函数（即试探函数），则有限元解在一个有限尺寸的单元内可以精确地和精确解一致。但是实际上有限元的试探函数只能取有限多项式，因此有限元解只能是精确解的一个近似解答。有限元解的收敛准则则需要回答的是，在什么条件下当单元尺寸趋于零时，有限元街趋于精确解。
+\begin{frame}{变分原理}
+问题的微分方程和边界条件表达式如下
+\begin{align*}
+&\textbf{A}(\textbf{u})\equiv \textbf{L}(\textbf{u})+\textbf{f}=\textbf{0}\quad in\quad\Omega\\
+&\textbf{B}(\textbf{u})=\textbf{0}\quad on\quad \Gamma
+\end{align*}
+由以上微分方程和边界条件相等效的伽辽金提法可表示为
+\begin{align*}
+\int_\Omega \delta\textbf{u}^T[\textbf{L}(\textbf{u})+\textbf{f}]\mathrm{d}\Omega
+-\int_\Gamma \delta{\textbf{u}}^T\textbf{B}(\textbf{u})\mathrm{d}\Gamma=0
+\end{align*}
+\end{frame}
+
+\begin{frame}{变分原理}
+利用算子是线性、自伴随的，可导出入下关系式
+\begin{align*}
+\int_\Omega \delta \textbf{u}^T \textbf{L}(\textbf{u}) \mathrm{d}\Omega =
+&=\int_\Omega \left[ \frac{1}{2} \delta \textbf{u}^T\textbf{L}(\textbf{u})+
+\frac{1}{2} \delta \textbf{u}^T \textbf{L}(\textbf{u}) \right] \mathrm{d}\Omega\\
+&=\int_\Omega \left[ \frac{1}{2} \delta \textbf{u}^T\textbf{L}(\textbf{u})+
+\frac{1}{2} \textbf{u}^T \textbf{L}( \delta \textbf{u}) \right] \mathrm{d}\Omega
++ \mathrm{b.t.}(\delta \textbf{u},\textbf{u})\\
+&=\int_\Omega \left[ \frac{1}{2} \delta \textbf{u}^T\textbf{L}(\textbf{u})+
+\frac{1}{2} \textbf{u}^T \delta \textbf{L}(  \textbf{u}) \right] \mathrm{d}\Omega
++ \mathrm{b.t.}(\delta \textbf{u},\textbf{u})\\
+&=\delta \int_\Omega \frac{1}{2}\textbf{u}^T\textbf{L}(\textbf{u})\mathrm{d}\Omega
++ \mathrm{b.t.}(\delta \textbf{u},\textbf{u})\\
+\end{align*}
+\end{frame}
+
+\begin{frame}{变分原理}
+代入得到原问题的变分原理
+\begin{align*}
+\delta \Pi (\textbf{u})=0
+\end{align*}
+其中
+\begin{align*}
+\Pi(\textbf{u})=\int_{\Omega}\left[ \frac{1}{2}\textbf{u}^T \textbf{L}(\textbf{u})+\textbf{u}^T\textbf{f}\right] \mathrm{d}\Omega + \mathrm{b.t.}(\textbf{u})
+\end{align*}
+上式右端$\mathrm{b.t.}(\textbf{u})$是由$\mathrm{b.t.}(\delta \textbf{u},\textbf{u})$与$\int_\Gamma \delta{\textbf{u}}^T\textbf{B}(\textbf{u})\mathrm{d}\Gamma$组成。
 \end{frame}
 
 
-\begin{frame}{有限元解的收敛准则}
-下面仍以含有一个待求的标量场函数为例，微分方程是
+\begin{frame}{变分原理}
+对于自伴随算子$L$是偶数(2m)阶的，构造函数$\tilde{u}$应事先满足含有$0\sim m-1$阶的强制边界条件，可不必事先满足$m\sim 2m-1$阶的自然边界条件。因此，可对泛函进行分部积分处理，得到弱形式
+\begin{align*}
+\Pi = \int_\Omega\left[\frac{1}{2}\textbf{C}(\textbf{u})\textbf{C}(\textbf{u})+\textbf{u} b\right] \mathrm{d}\Omega +\mathrm{b.t}
+\end{align*}
+\end{frame}
+
+\begin{frame}{里兹法}
+\begin{block}{里兹方法}
+针对线性自伴随微分方程所得到与之相对应的变分原理后，可以用于标准化过程——里兹方法来进行求解其近似解。
+\end{block}
+用一族带有待定参数的试探函数来近似表示
+\begin{align*}
+\textbf{u} \approx \tilde{\textbf{u}}= \sum\limits_{i=1}^{n}\textbf{N}_i a_i=\textbf{N}\textbf{a}
+\end{align*}
+其中$\textbf{a}$是待定参数， $\textbf{N}$是取自完备序列的已知函数，注意到此处仅截取了有限项，故存在\textcolor{red}{截断误差}。
+\end{frame}
+
+\begin{frame}{里兹方法收敛条件}
+\begin{itemize}
+\item 试探函数$N_1,N_2,\cdots,N_n$应选自完备函数列
+\item 试探函数$N_1,N_2,\cdots,N_n$应满足$C_{m-1}$连续性要求，即泛函中包含有未知函数的最高微分项阶数为$m$时，试探函数的$0\sim m-1$阶导数应该连续，以保证泛函中积分存在。
+\end{itemize}
+\begin{block}{关于$c_n$连续的解释}
+\begin{itemize}
+\item 一个函数在域内本身连续，他的一阶导数有着有限多个不连续的间断点，即在域内可积分，这样的函数称之为具有$C_0$连续性的函数。
+\item 一个函数在域内函数本身直到他的$n-1$阶导数连续，第$n$阶导数具有有限多个不连续间断点且可在域内积分，这样的函数称之为具有$C_{N-1}$连续性的函数。
+\end{itemize}
+\end{block}
+\end{frame}
+
+
+\begin{frame}{弹性力学变分原理的弱形式}
+弱形式弱在哪？
+\begin{align*}
+\Pi_p(u_i)=\int_\Omega\frac{1}{2}D_{ijkl}\varepsilon_{ij}\varepsilon_{kl}\mathrm{d}V-\int_{\partial\Omega}\overline{T_i}u_i\mathrm{d}S-\int_\Omega\overline{f_i}u_i\mathrm{d}V
+\end{align*}
+\begin{align*}
+(\lambda+\mu)u_{k.ki}+\mu u_{i,jj}+F_i = 0
+\end{align*}
+积分形式中仅包含位移一阶导数应变，后者包含了应变的导数，故后者对函数的连续性要求更高。
+\end{frame}
+
+
+%\section{Lower Limit Properties of Displacement Element Solution}
+\section{有限元解的性质和收敛准则}
+\begin{frame}{有限元解的性质和收敛准则}
+下面以一个含有待求的标量场函数为例，微分方程是
 \begin{align*}
 A(\phi)=L(\phi)+b=0
 \end{align*}
@@ -103,7 +272,10 @@ A(\phi)=L(\phi)+b=0
 \begin{align*}
 \Pi = \int_\Omega\left[\frac{1}{2}\textbf{C}(\phi)\textbf{C}(\phi)+\phi b\right] \mathrm{d}\Omega +\mathrm{b.t}
 \end{align*}
-假定泛函$\Pi$中包含和它的直至$m$阶的各阶导数，若$m$阶导数是非零的，则近似函数$\phi$至少必须是$m$次多项式。若取$p$次完全多项式为试探函数，则必须满足$p\ge m$。假设$\phi$仅是$x$的函数，则$\phi$及其各阶导数在一个单元内的表达式如下
+\end{frame}
+
+\begin{frame}
+假定泛函$\Pi$中包含和它的直至$m$阶的各阶导数，若$m$阶导数是非零的，则近似函数$\phi$至少必须是$m$次多项式。若取$p$次完全多项式为试探函数，则必须满足$p\ge m$。
 \begin{align*}
 \phi=\beta_{0}+\beta_{1}x+\beta_{2}x^{2}+\beta_{3}x^{3}+\beta_{4}x^{4}+\beta_{p}x^{p}\\
 \dfrac{d\phi}{dx}=\beta_{1}+2\beta_{2}x+3\beta_{4}x^{2}+...+p\beta_{p}x^{p-1}\\
@@ -112,105 +284,93 @@ A(\phi)=L(\phi)+b=0
 \end{align*}
 \end{frame}
 
-
-\begin{frame}{有限元解的收敛准则}
-由上式可见，因为$\phi$是$p$次完全多项式，所以它的直至$m$阶导数的表达式中都包含有常数项。当单元尺寸趋于零，在每一单元内$\phi$及其直至$m$阶导数将趋于它的精确值，即趋于常数。因此，每一个单元的泛函有可能趋于它的精确值。如果试探函数还满足连续性要求，那么整个系统的泛函将趋于精确值。有限元就趋于精确解，也就是说解是收敛的。
+\begin{frame}{收敛准则}
+\begin{block}{准则1-完备性}
+如果出现在泛函中场函数的最高阶导数是$m$阶，则有限元解收敛的条件之一是单元内场函数的试探函数至少是$m$次完全多项式。
+\end{block}
+\begin{block}{物理意义}
+反映单元的刚体位移和常应变位移模式
+\end{block}
 \end{frame}
 
-
-\begin{frame}{有限元解的收敛准则}
-从上述讨论可以得到下列收敛性准则。
-准则1 完备性要求。如果出现在泛函中场函数的最高阶导数是$m$阶，则有限元解收敛的条件之一是单元内场函数的试探函数至少是$m$次完全多项式。或者说试探函数中必须包括本身和直至$m$阶导数为常数的项。
-当单元的插值函数满足上述要求时，称这样的单元是完备的。
-至于连续性的要求，当试探函数是多项式的情况下，单元内部函数的连续性显然是满足的，如试探函数是$m$次多项式，则单元内部满足连续性要求，因此需要特别注意的是单元交界面上的连续性，这就提出了另一个收敛准则。
+\begin{frame}{收敛准则}
+\begin{block}{准则1-连续性}
+当试探函数为多项式的情况下，单元内部函数的连续性显然是满足的，如果试探函数是$m$次多项式，则单元内部满足$C_{m-1}$连续性。
+\end{block}
+\begin{block}{物理意义}
+单元内部连续协调。
+\end{block}
 \end{frame}
 
-
-\begin{frame}{有限元解的收敛准则}
-准则2 协调性要求。如果出现在泛函中的最高阶导数是$m$阶，则试探函数在单元交界面上必须有连续性，即在相邻单元的交界面上函数应有直至的连续导数。
-当单元的插值函数满足上述要求时，称这样的单元是协调的。
-简单地说，当选取的单元既完备又协调时，有限元解释收敛的，即当单元尺寸趋于零时，有限元解趋于精确解。
-\end{frame}
-
-\subsection{误差分析}
-\begin{frame}{误差分析}
-需要补充说明的是，关于前面所述有限元解收敛于微分方程精确解的进一步含义。因为微分方程的精确解往往不一定能够得到，甚至问题的微分方程并未建立（例如对于复杂结构）。同时有限元解中通常包含多种误差。因此，在更严格的意义上说，有限元解收敛于精确解是指有限元解的离散误差趋于零。所谓离散误差是指一个连续的求解域被划分成有限个子域（单元）时，由单元的试探函数近似整体域的场函数所引起的误差。
-\par
-另一主要误差是计算机有限的有效位数（字长）所引起的，它包含舍入（四舍五入）误差和截断（原来的实际位数被截取为计算机允许的有限位数）误差。前者带有概率的性质，主要靠增加有效位数（如采用双精度计算）和减少运算次数（如采用有效的计算方法和合理的程序结构）来控制。后者除与有效位数直接有关外，还与结构（最终表现为刚度矩阵）的性质有密切关系。例如结构在不同方向的刚度相差过于悬殊，可能使最后的代数方程组成病态，从而使解答的误差很大，甚至导致求解失败。
-\end{frame}
-
-\section{收敛准则的物理意义}
-\begin{frame}{收敛准则的物理意义}
-为了从物理意义上加深对收敛准则的理解，下面以平面问题为例加以说明。
-\par
-在平面问题中，泛函$\Pi_{p}$中出现的是位移$u$和$v$的一次导数，即$\varepsilon_{x}$,$\varepsilon_{y}$,$\gamma_{xy}$因此$m=1$。收敛准则1要求插值函数或位移函数至少是$x$,$y$的一次完全多项式。我们知道位移及其一阶导数为常数的项是代表与单元的刚体位移和常应变状态相应的位移模式。实际分析中，各单元的变形往往包含着刚体位移，同时当单元尺寸趋于无穷小时，各单元的应变也总是趋于常应变。所以完备性要求由插值函数所构成的有限元解必须能反映单元的刚体位移和常应变状态。若不能满足上述要求，那么赋予结点以单元刚体位移（零应变）或常应变的位移值时，在单元内部将产生非零或非常值的应变，这样有限元解将不可能收敛于精确解。
-\end{frame}
-
-\begin{frame}{收敛准则的物理意义}
-应该指出，在Bazeley等人开始提出上述收敛准则时，是要求在单元尺寸趋于零的极限情况下满足完备性收敛准则。如果将此收敛准则用于有限尺寸的单元，将使解的精度得到改进。
-\par
-对于平面问题，协调性要求是$C_{v}$连续性，即要求位移函数$u$,$v$的零阶导数，也就是位移函数自身在单元交界面上是连续的。如果在单元交界面上位移不连续，表现为当结构变形时将在相邻单元间产生缝隙或重叠，这意味着将引起无限大的应变，这时应变将发生在交界面上的附加应变能补充到系统的应变能中去。但在建立泛函$\Pi_{p}$时，没有考虑到这种情况，只考虑了产生于各个单元内部的应变能。因此，当边界上位移不连续时，则有限元解就不可能收敛于精确解。
-\end{frame}
-
-\begin{frame}{收敛准则的物理意义}
-可以看出，最简单的3结点三角形单元的插值函数既满足完备性要求，也满足协调性要求。因此采用此种单元，解是收敛的。
-\par
-应当指出，对于二、三维弹性力学问题，泛函中出现的导数是一阶（m$=1$）。对近似的位移函数的连续性要求仅是$C_{v}$连续性，这种只要求函数自身在单元边界连续的要求很容易得到满足。
-\par
-需要指出的是，当泛函中出现的导数高于一阶（例如板壳问题，泛函中出现的导数是2阶）时，则要求试探函数在单元交界面上具有连续的一阶或高于一阶的导数，即具有$C_{v}$或更高的连续性，这时构造单元的插值函数比较困难。在某些情况下，可以放松对协调性的要求，只要这种单元能通过分片试验，有限元解仍然可以收敛于正确的解答。这种单元称为非协调元，将在第5章以及板壳有限元中分别加以讨论。
-\end{frame}
-
-%\subsection{Principle of minimum complementary energy}
-%\begin{frame}{Principle of minimum complementary energy}
-%       
-%\end{frame}
-\section{位移元解的下限性质}
-\begin{frame}{位移元解的下限性质}
-以位移为基本未知量，并基于最小位能原理建立的有限元称之为位移元。通过系统总位能的变分过程，可以分析位移元的近似解与精确解偏离的下限性质。
-\par
-系统总位能的离散形式为
-\begin{align*}
-\Pi_{p}=\frac{1}{2}a^{T}Ka-a^{T}P
-\end{align*}
-由变分$\delta\Pi_{p}\to0$得到有限元求解方程
-\begin{align*}
-Ka=P
-\end{align*}
-将式代入式得到
-\begin{align*}
-\Pi_{p}=\frac{1}{2}a^{T}Ka-a^{T}Ka=-\frac{1}{2}a^{T}Ka=-U
-\end{align*}
-在平衡情况下，系统总位能等于负的应变能。因此$\Pi_{p}\Rightarrow\Pi_{pmin}$，则$U\Rightarrow U_{max}$
-\end{frame}
-
-
-\begin{frame}{位移元解的下限性质}
-在有限元解中，由于假定的近似位移模式一般来说总是与精确解有差别，因此得到的系统总位能总会比真正的总位能要大。我们将有限元解的总位能、应变能、刚度矩阵和结点位移用$\widehat{\Pi_{p}}$,$\widehat{U}$,$\widehat{K}$,$\widehat{a}$表示，相应的精确解的有关量用$\Pi_{p}$,$U$,$K$,$a$表示，由于$\widehat{\Pi_{p}}\ge\Pi_{p}$，则有$\widehat{U}\le U$，即
-\begin{align*}
-\widehat{a}^{T}\widehat{K}\widehat{a}\le a^{T}Ka
-\end{align*}
-对于精确解有$Ka=P$
-\par
-对于近似解有$\widehat{K}\widehat{a}=P$    
-\par
-将（2.4.7）式代入（2.4.6）式得到$\widehat{a}^{T}P \le a^{T}P$
-\par
-由（2.4.8）式看出，近似解应变能小于精确解应变能的原因是由于近似解的位移$\widehat{a}$总体上要小于精确解的位移$a$。故位移元得到的位移解总体上不大于精确解，即解具有下限性质。
+\begin{frame}{收敛准则}
+从严格意义上来讲，有限元解收敛于精确解实际上是指有限元解的离散误差趋近于零。所谓的离散误差是指一个连续的求解域被划分为有限个子域时，由单元的试函数近似整体的场函数时所引起的误差。
+\begin{block}{准则2-协调性}
+如果泛函中出现的最高阶导数是$m$阶的，则试探函数在单元交界面上必须具有$C_{m-1}$连续性，即在相邻单元交界面上，函数应当有直到$m-1$阶的连续导数。
+\end{block}
 
 \end{frame}
 
-\begin{frame}{位移元解的下限性质}
-位移解的下限性质可以解释如下：单元原是连续体的一部分，具有无限多个自由度。在假定了单元的位移函数后，自由度限制为只有以结点位移表示的有限自由度，即位移函数对单元的变形进行了约束和限制，使单元的刚度较实际连续体加强了，因此连续体的整体刚度随之增加，离散后$\widehat{K}$的较实际的$K$为大，因此求得的位移近似解总体上（而不是每一点）将小于精确解。
-\end{frame}
-%
-%\section{Constrained Variational Principles(广义变分原理)}
-%\subsection{H-W Variational Principles(胡海昌-鹫津久广义变分原理)}
-%\begin{frame}{H-W Variational Principles(胡海昌-鹫津久广义变分原理)}
-%
-%\end{frame}
-%\subsection{H-R Variational Principles(Hellinger-Reissner变分原理)}
-%\begin{frame}{H-R Variational Principles(Hellinger-Reissner变分原理)}
-%
-%\end{frame}
-
+%\section{Selection of Items of Polynomial}
+%\subsection{Lagrange Unit Family}
+%\subsection{Hermit Unit Family}
+%\subsection{Serendipity Unit Family}
+%\section{Introduction of Isogeometric analysis}
 \end{document}
+
+
+%
+%\begin{frame}{里兹法}
+%将近似函数代入泛函$\Pi$中可得到用试函数和待定系数表示的的泛函表达式，此时，泛函的极值问题为零转换为泛函对所包含的待定参数求取全微分，并令所得方程为等于零，即
+%\begin{align*}
+%\delta\Pi = \frac{\partial \Pi}{\partial {a}_1}\delta {a}_1
+%+\frac{\partial \Pi}{\partial {a}_2}\delta {a}_2
+%+\cdots
+%+\frac{\partial \Pi}{\partial {a}_n}\delta {a}_n
+%=0
+%\end{align*}
+%由于$\delta {a}_1,\delta {a}_2,\cdots$是任意的，所以有
+%\begin{align*}
+%\frac{\partial \Pi}{\partial {a}} =
+%\left[ \begin{matrix}
+%\frac{\partial \Pi}{\partial {a}_1}\\ 
+%\frac{\partial \Pi}{\partial {a}_2}\\ 
+%\vdots\\
+%\frac{\partial \Pi}{\partial {a}_n}
+%\end{matrix}\right]
+%=\textbf{0}
+%\end{align*}
+%\end{frame}
+%
+%\begin{frame}{里兹法}
+%将近似函数代入泛函$\Pi$中可得到用试函数和待定系数表示的的泛函表达式，此时，泛函的极值问题为零转换为泛函对所包含的待定参数求取全微分，并令所得方程为等于零，即
+%\begin{align*}
+%\delta\Pi = \frac{\partial \Pi}{\partial {a}_1}\delta {a}_1
+%+\frac{\partial \Pi}{\partial {a}_2}\delta {a}_2
+%+\cdots
+%+\frac{\partial \Pi}{\partial {a}_n}\delta {a}_n
+%=0
+%\end{align*}
+%由于$\delta {a}_1,\delta {a}_2,\cdots$是任意的，所以有
+%\begin{align*}
+%\frac{\partial \Pi}{\partial {a}} =
+%\left[ \begin{matrix}
+%\frac{\partial \Pi}{\partial {a}_1}\\ 
+%\frac{\partial \Pi}{\partial {a}_2}\\ 
+%\vdots\\
+%\frac{\partial \Pi}{\partial {a}_n}
+%\end{matrix}\right]
+%=\textbf{0}
+%\end{align*}
+%\end{frame}
+%\begin{frame}{里兹法应用}
+%对于薄膜压力问题有
+%\begin{align*}
+%&-\Delta u = f(x,y)\quad \text{($\Omega$是有界区域，$\partial \Omega$ 是分段光滑曲线)}\\
+%&u|_{\partial \Omega}=0
+%\end{align*}
+%定义
+%\begin{align*}
+%&-\Delta u = f(x,y)\quad \text{($\Omega$是有界区域，$\partial \Omega$ 是分段光滑曲线)}\\
+%&u|_{\partial \Omega}=0
+%\end{align*}
+%\end{frame}
